--- a/index.html
+++ b/index.html
@@ -9,9 +9,54 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chirkutt - share your thoughts</title>
+
+    <style>
+      .preloader {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        background: #fff;
+        z-index: 100000;
+      }
+
+      [data-preloader="false"] .preloader {
+        display: none;
+      }
+
+      .preloader > img {
+        animation: pulse 1s infinite;
+      }
+
+      @keyframes pulse {
+        0% {
+          opacity: 0.5;
+        }
+        50% {
+          opacity: 1;
+        }
+        100% {
+          opacity: 0.5;
+        }
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
+
+    <div id="preloader" class="preloader bg-white dark:bg-neutral-800">
+      <img
+        src="/images/logo/chirkutt-logo-primary.png"
+        alt="Chrikutt"
+        width="60"
+        height="60"
+      />
+    </div>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
